# pythonlib

./: .gitmodules  README.md  pyproject.toml
scripts/: run_sequence.py
src/conditional_runner/: __version__.py  cli.py  commands.py
src/conditional_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dillema/: __init__.py  cli.py  commands.py
