[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dillema"
description = "Convenience CLI for launching Ray clusters and deploying LLMs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # core package has no heavy runtime deps; extras are available below
]
dynamic = ["version"]

authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yourusername/dillema"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "dillema.__version__" }

[project.scripts]
dillema = "dillema.cli:main"

[project.optional-dependencies]
# Extra for running/deploying LLMs (heavy deps installed only when requested)
llm = [
    "ray[serve,llm]>=2.43.0",
    "vllm==0.7.2",
    "botocore>=1.30.0",
    "xgrammar==0.1.11",
    "pynvml==12.0.0",
]

# Extra for chatbot/web UI related dependencies (lighter-weight; does NOT install ray/vllm)
chatbot = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dillema*"]
exclude = ["tests*", "docs", "build", "temp*"]